Using proper html for live server

--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<h1>hello world</h1>
-<p>
-this is my page for the tutorial  
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>HTML and CSS Tutorial</title>
+</head>
+<body>
+  <h1>Hello, my name is Bryant</h1>
+  <h1>Hello</h1>
+  <p>This is the tutorial page</p>
+</body>
+</html>
