--- a/index.html
+++ b/index.html
@@ -7,8 +7,23 @@
   <title>HTML and CSS Tutorial</title>
 </head>
 <body>
-  <h1>Hello, my name is Bryant</h1>
-  <h1>Hello</h1>
-  <p>This is the tutorial page</p>
+  <h1>I am heading 1</h1>
+  <h2>I am heading 2</h2>
+  <h3>I am heading 3</h3>
+  <h4>I am heading 4</h4>
+  <h5>I am heading 5</h5>
+  <h6>I am heading 6</h6>
+  <p>This is a paragraph</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+     non proident, sunt in culpa qui officia deserunt mollit anim id est
+     laborum.</p>
+  <!-- html ignores extra white space -->
+  <h3>Hello      World</h3>
+  <img src="./startrek.jpg" alt="Star Trek Poster" />
+  <img src="https://upload.wikimedia.org/wikipedia/commons/a/a8/Leonard_Nimoy_William_Shatner_Star_Trek_1968.JPG" alt="Another way to show the image">
 </body>
 </html>
