--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
      laborum.</p>
   <!-- html ignores extra white space -->
   <h3>Hello      World</h3>
-  <img src="./startrek.jpg" width="260" alt="Star Trek Poster" />
+  <img src="./images/startrek.jpg" width="260" alt="Star Trek Poster" />
   <img src="https://upload.wikimedia.org/wikipedia/commons/a/a8/Leonard_Nimoy_William_Shatner_Star_Trek_1968.JPG"
   width="260" alt="Another way to show the image">
 </body>
