--- a/index.html
+++ b/index.html
@@ -29,5 +29,8 @@
   <br />
   <img src="https://upload.wikimedia.org/wikipedia/commons/a/a8/Leonard_Nimoy_William_Shatner_Star_Trek_1968.JPG"
   width="260" alt="Another way to show the image">
+  <a href="https://memory-alpha.fandom.com/wiki/Starfleet_Academy" target="_blank">
+    Info on Starfleet Academy</a>
+  <a href="about.html">About</a>
 </body>
 </html>
