using images as links

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <title>HTML and CSS Tutorial</title>
 </head>
 <body>
+  <a href="https://www.imdb.com/title/tt0125516/" target="_blank">
+    <img src="https://images-na.ssl-images-amazon.com/images/I/81WW2bhqe5L.jpg"
+    alt="Starfleet Academy" height="260">
+  </a>
   <h1 id="top">I am heading 1</h1>
   <h2>I am heading 2</h2>
   <h3>I am heading 3</h3>
